# linkapro

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AUTHENTICATION.md  Dockerfile.django  Dockerfile.fastapi  Enforcement.md  Payments-Readme.md  README.md  conftest.py  continue_backend main weaks.txt  create_admin.py  db.sqlite3  docker-compose.yml  fixing.md  manage.py  nginx.conf  payments-policy.hcl  pyproject.toml  pytest.ini  render-vault.yaml  requirements.txt  sshkey  sshkey.pub  test.py
.github/workflows/: ci.yml  vendor-domain.yml
config/: celery.py  settings.py  urls.py
django_app/: build.sh  manage.py  urls.py  wsgi.py
docs/: ACCOUNTS_SECURITY.md  ai_implementation_prompt.md  backend_architecture_plan.docx  identity_flow_boundaries.md  vault_dependency_map.md
fastapi_app/: bootstrap_db.py  config.py  database.py  dependencies.py  main.py  repositories.py  schemas.py
keys/: jwt_private.pem  jwt_public.pem
payments/: tasks.py
requirements/: base.txt  fastapi.txt  production.txt  test.txt
scafford/: scafford.py
scripts/: vault-dev-setup.ps1
tasks/: celery.py  document_domain_events.py  document_tasks.py  email_tasks.py  identity_domain_events.py  image_tasks.py  marketplace_sync.py  notifications.py  payment_domain_events.py  vendor_domain_events.py
tests/: factories.py  test_setings.py
wedding_docs/: Gufata_Irembo_Professional_Budget.xlsx  Rwanda_Church_Wedding_Budget.xlsx  Rwanda_Civil_Marriage_Budget.xlsx  Rwandan_Traditional_Wedding_Dote_Budget.xlsx  Rwandan_Wedding_Reception_Budget.xlsx  proposal_full_planner.xlsx
(+761 files in other folders)
